Refactor parallel for p-values
1. Refactor the p-value parallel computation. Working for mac now.
2. Use a non-degenerate PWM for indel test.
3. Add docstring for visualization.

R CMD check passes.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,8 +3,13 @@
 export(comp_indel_mat_d)
 export(indel_motif_scores)
 export(indel_p_values)
+export(plot_indel_binding)
 export(pval_with_less_var)
-import(BiocParallel)
 import(Rcpp)
-import(plyr)
+import(grid)
+importFrom(BiocParallel,MulticoreParam)
+importFrom(BiocParallel,SnowParam)
+importFrom(BiocParallel,bpmapply)
+importFrom(motifStack,plotMotifLogo)
+importFrom(plyr,ldply)
 useDynLib(atIndel)
